Revision history for Rakudo-CORE-META

{{$NEXT}}

0.0.9  2022-07-06T15:36:00+02:00
    - Make sure we use a released version also in <version>

0.0.8  2022-06-02T16:57:08+02:00
    - Make sure we use a released version for version

0.0.7  2022-06-02T12:48:33+02:00
    - Follow changes in core meta and remove a wonky test

0.0.6  2022-05-22T15:06:05+02:00
    - Make sure module compiles on an uninstalled Rakudo
    - Add link to sponsoring

0.0.5  2022-02-09T09:55:03+01:00
    - Add "source-url" key for consistency

0.0.4  2021-11-08T14:38:25+01:00
    - Remove the module statement, we don't need it anymore

0.0.3  2021-11-04T12:23:59+01:00
    - Now really change the auth to zef:lizmat

0.0.2  2021-11-04T12:05:20+01:00
    - Argh, forgot to change auth to zef:lizmat

0.0.1  2021-11-04T11:40:34+01:00
    - Initial version