@@ -17,9 +17,16 @@
   "resources": [
   ],
   "source-url": "https://github.com/lizmat/Rakudo-CORE-META.git",
+  "support": {
+    "bugtracker": "https://github.com/lizmat/Rakudo-CORE-META/issues",
+    "email": "liz@raku.rocks",
+    "source": "https://github.com/lizmat/Rakudo-CORE-META.git"
+  },
   "tags": [
+    "CORE",
+    "META"
   ],
   "test-depends": [
   ],
-  "version": "0.0.9"
+  "version": "0.0.10"
 }
