@@ -2,12 +2,14 @@ name = Rakudo-CORE-META
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Rakudo/CORE/META.rakumod
+filename = doc/Rakudo-CORE-META.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
