@@ -1,0 +1,5 @@
+use Test::Coverage;
+
+must-be-complete;
+
+# vim: expandtab shiftwidth=4
